--- a/index.html
+++ b/index.html
@@ -1,36 +1,101 @@
 <!DOCTYPE html>
 <html lang = "en">
-<head>
-    <meta charset = "UTF-8">
-    <meta name = "viewport" content="width = device-width, initial-scale = 1.0">
-    <title>Document</title>
+	<head>
+		<meta charset = "UTF-8" />
+		<meta name = "viewport" content = "width = device-width, initial-scale = 1.0"/>
+		<meta http-equiv = "X-UA-Compatible" content = "ie = edge"/>
+		<link rel = "stylesheet" href = "styles/general.css"/>
+		<title>Tic-Tac-Toe</title>
+	</head>
+  <body>
+    <header>
+		<h1>Tic-Tac-Toe</h1>
+    </header>
 
-    <link rel = "stylesheet" href = "styles/general.css">
-    <script src = "scripts/work.js"></script>
-</head>
-<body>
-    <div class = "page-container">
-        <header>Tic Tac Toe</header>
-        <div class = "grid-container">
-            <div class = "grid">
-                <div id = "row1" class = "row">
-                    <div class = "box" id = "box1"></div>
-                    <div class = "box" id = "box2"></div>
-                    <div class = "box" id = "box3"></div>
-                </div>
-                <div id = "row2" class = "row">
-                    <div class = "box" id = "box1"></div>
-                    <div class = "box" id = "box2"></div>
-                    <div class = "box" id = "box3"></div>
-                </div>
-                <div id = "row3" class = "row">
-                    <div class = "box" id = "box1"></div>
-                    <div class = "box" id = "box2"></div>
-                    <div class = "box" id = "box3"></div>
-                </div>
-            </div>
-            </div>
+    <div class = "game-wrapper" style = "display: none;">
+		<div class = "game">
+		<div class = "player-info first-player">
+			<h3>1stPl</h3>
+			<h4 class = "nick-name">Player1</h4>
+			<h4 class = "ch">X</h4>
+		</div>
+		<div class = "grid">
+            <table class = "box-container">
+                <tr>
+                    <td class = "box" data-id = "0"><span></span></td>
+                    <td class = "box" data-id = "1"><span></span></td>
+                    <td class = "box" data-id = "2"><span></span></td>
+                </tr>
+                <tr>
+                    <td class = "box" data-id = "3"><span></span></td>
+                    <td class = "box" data-id = "4"><span></span></td>
+                    <td class = "box" data-id = "5"><span></span></td>
+                </tr>
+                <tr>
+                    <td class = "box" data-id = "6"><span></span></td>
+                    <td class = "box" data-id = "7"><span></span></td>
+                    <td class = "box" data-id = "8"><span></span></td>
+                </tr>
+            </table>
         </div>
+		<div class = "player-info second-player">
+			<h3>2ndPl</h3>
+			<h4 class = "nick-name">Player2</h4>
+			<h4 class = "ch">O</h4>
+		</div>
+		</div>
+
+      <div class = "game-options">
+        <button class = "button new-game">New Game</button>
+        <span class = "separator">|</span>
+        <button class = "button reset-game">Reset</button>
+      </div>
     </div>
-</body>
+
+    <div class = "modal-wrapper">
+      <div class = "modal game-mode">
+        <h2 class = "title">Tic-Tac-Toe</h2>
+        <div class = "content">
+          <button class = "button pvp-mode">Player vs Player</button>
+          <button class = "button pve-mode">Player vs PC</button>
+        </div>
+      </div>
+    </div>
+
+    <div class = "modal-wrapper" style = "display: none;">
+      	<div class = "modal nicknames">
+        	<h2 class = "title">Nicknames</h2>
+        	<div class = "content">
+          		<div class = "element first-player-input">
+					<label for = "first-player-nickname">1stPlayer</label>
+					<input type = "text" id = "first-player-nickname" placeholder="Player1" maxlength="18"/>
+          		</div>
+				<div class = "element second-player-input">
+					<label for = "second-player-nickname">2ndPlayer</label>
+					<input
+					type = "text" id = "second-player-nickname" placeholder = "Player2"	maxlength = "18"/>
+				</div>
+          		<div class = "modal-options">
+            		<button class = "button back">Back</button>
+            		<button class = "button next">Next</button>
+          		</div>
+        	</div>
+      	</div>
+    </div>
+
+    <div class = "modal-wrapper" style = "display: none;">
+		<div class = "modal game-over">
+				<h2 class = "title">Game Over</h2>
+				<div class = "content">
+					<h2 class = "gg"></h2>
+					<div class = "modal-options">
+						<button class = "button new-game">New Game</button>
+						<button class = "button reset-game">Reset</button>
+					</div>
+				</div>
+		</div>
+    </div>
+
+    <script src = "scripts/work.js"></script>
+  </body>
 </html>
